<resources>
    <string name="app_name">Adriana\'s News Companion</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_manage_feed">Add/Manage Feed</string>
    <string name="add_feed">Add Feed</string>
    <string name="news">News</string>
    <string name="setting">Settings</string>
    <string name="interface_header">Interface</string>
    <string name="translation_header">Language</string>
    <string name="language_identifier_header">Language Identifier</string>
    <string name="text_to_speech_header">Text-to-Speech</string>
    <string name="sync_header">Sync</string>
    <string name="ai_summary_length_summary">Set the approximate word count for AI summaries.</string>
    <string name="ai_features_header">AI Features</string>
    <string name="ai_cleaning_title">Enable AI Article Cleaning</string>
    <string name="ai_cleaning_summary_on">AI will automatically remove clutter (ads, paywalls, etc.) from articles.</string>
    <string name="ai_cleaning_summary_off">AI article cleaning is disabled.</string>
    <string name="ai_summarization_title">Enable AI Summarization</string>
    <string name="ai_summarization_summary_on">AI will generate a summary for articles.</string>
    <string name="ai_summarization_summary_off">AI summarization is disabled.</string>
    <string name="ai_summary_length_title">Summary Length</string>
    <string name="summary_prefix">Summary</string>
    <string name="jobPeriodic_title">Update interval</string>
    <string name="confidence_threshold_title">Confidence threshold (%)</string>
    <string name="text_to_speech_settings">Text-to-Speech settings</string>
    <string name="text_to_speech_settings_summary">Modify speech rate, pitch, and languages of text-to-speech</string>
    <string name="background_music">Background music</string>
    <string name="background_music_file">Upload background music</string>
    <string name="background_music_summary_on">Play background music when text-to-speech is reading</string>
    <string name="background_music_summary_off">Turn off background music when text-to-speech is reading</string>
    <string name="background_music_volume">Background music volume</string>
    <string name="background_music_volume_summary">Adjust the volume of background music</string>
    <string name="theme_title">Dark theme</string>
    <string name="theme_summary_on">Dark theme enabled</string>
    <string name="theme_summary_off">Light theme enabled</string>
    <string name="entries_limit_title">Article limit for each feed</string>
    <string name="entries_limit_summary">Delete oldest unbookmarked articles after refresh (limit excludes bookmarked)</string>
    <string name="display_summary_title">Display summary</string>
    <string name="display_summary_on">Summary page of the article will be shown when an article is clicked</string>
    <string name="display_summary_off">Summary page of the article will not be shown when an article is clicked</string>
    <string name="highlight_text_title">Highlight text</string>
    <string name="highlight_text_on">Search and highlight the paragraph where text-to-speech is speaking</string>
    <string name="highlight_text_off">Does not highlight the text when text-to-speech is speaking</string>
    <string name="translationLanguage_title">Desired language</string>
    <string name="translationMethod_title">Translation method</string>
    <string name="translationMethod_summary">Choose how the app translates text.\'Line by Line\' is slower but more accurate, \'All at Once\' is faster but may be less accurate, and \'Paragraph by Paragraph\' offers a balance between the two.</string>
    <string name="confidence_threshold_summary">Higher % will result in better accuracy but will be less likely to change languages</string>
    <string name="languageIdentifier">Use Language Identifier</string>
    <string name="auto_translate_title">Auto-translate articles</string>
    <string name="auto_translate_on">Automatically translate articles to the default language</string>
    <string name="auto_translate_off">Do not automatically translate articles</string>
    <string name="share">Share</string>
    <string name="mark_as_read">Mark as read</string>
    <string name="mark_as_unread">Mark as unread</string>
    <string name="move_entries_above_to_bin">Move entries above to bin</string>
    <string name="move_entries_below_to_bin">Move entries below to bin</string>
    <string name="delete">Delete</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="bookmark">Bookmark</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="exit_browser">Offline mode</string>
    <string name="reload">Re-extract article</string>
    <string name="reading_mode">Switch to reading mode</string>
    <string name="playing_mode">Switch to playing mode</string>
    <string name="highlight_text_turn_on">Turn on highlight text</string>
    <string name="highlight_text_turn_off">Turn off highlight text</string>
    <string name="background_music_turn_on">Turn on background music</string>
    <string name="background_music_turn_off">Turn off background music</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="feed">Feed</string>
    <string name="help">Help</string>
    <string name="add_more_feed">Add more feed</string>
    <string name="save_app_state">Save app state</string>
    <string name="load_app_state">Load app state</string>
    <string name="all_feed">All feeds</string>
    <string name="reload_message">Are you sure to re-extract the content of the article? (For more information, refer to help page)</string>
    <string name="reload_all_message">Are you sure to re-extract all the articles\' content of this feed?</string>
    <string name="reload_suggestion_message">No content was extracted from this article. Would you like to increase the extraction delay time? Some websites may require additional time for proper extraction.</string>
    <string name="reload_confirmation">Re-extract article?</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="login_message">An account is required to extract the full content of SOME websites. If you have an account to sign in into the website, please click "Yes" and you will be redirected to the website for signing in with your account. \n\n(Note: if you did not sign in and your new feed is extracted, you still can re-extract the feed at the add feed page after signing in)</string>
    <string name="login_complete_message">If "Yes", your new feed will be added to the database. If "No", you will continue to stay in this page.</string>
    <string name="login_request_confirmation">Does this news feed require a login account?</string>
    <string name="login_complete_confirmation">Done signing in?</string>
    <string name="feed_not_added_login_cancelled">Feed not added - login was cancelled</string>
    <string name="no">No</string>
    <string name="sort_by">Sort by</string>
    <string name="sort_latest">Latest first</string>
    <string name="sort_oldest">Oldest first</string>
    <string name="filter_by">Filter by</string>
    <string name="filter_all">All articles</string>
    <string name="filter_bookmark">Bookmark only</string>
    <string name="filter_read">Read only</string>
    <string name="filter_unread">Unread only</string>
    <string name="play">Play</string>
    <string name="read">Read</string>
    <string name="more">More</string>
    <string name="help_what_is_rss">What is RSS?</string>
    <string name="help_what_is_rss_desc">RSS (Really Simple Syndication) is a technology that allows you to gather and receive updates from various news websites in a standardized format. By subscribing to RSS feeds, you can stay informed and effortlessly access the latest articles from your favorite sources.\n\nRSS eliminates the need to visit multiple websites individually to check for updates. Instead, the RSS news reader app collects and organizes the content from subscribed feeds into a single place. This way, you can conveniently browse and read news articles and other updates from various sources without the need to visit each website separately.\n\nWith the app\'s RSS functionality, you can easily discover new content, personalize your news feed by selecting specific sources, and stay up to date with the latest information across different categories. The app automatically fetches and presents the newest articles from your subscribed feeds, allowing you to efficiently consume news and stay informed with just a few taps.</string>
    <string name="help_start">How to get started?</string>
    <string name="help_start_desc">To subscribe to a news source, navigate to the feed page and paste the URL to the text box under the \'Add\' tab. Once the feed is successfully extracted, the articles will be displayed in the News page if the feed is not empty.\n\nTo obtain the URL, you can look for an RSS feed on your desired website and copy the link. Alternatively, you can check if your website has an RSS feed by using the link provided on the feed page under the \'Add\' tab.\n\nHowever, if the website does not support RSS, you can visit https://rss.app to generate your own feed.</string>
    <string name="help_change_feed_language">How to change the language of a feed?</string>
    <string name="help_change_feed_language_desc">To change the language of a feed, you can go to the \'Manage\' tab on the feed page and click on the edit button. Select the desired language for the feed.\n\nNote: If you choose a language other than \'Use Language Identifier\', text-to-speech will use that language regardless of other settings.</string>
    <string name="help_wrong_language">Why is the text-to-speech speaking in the wrong language?</string>
    <string name="help_wrong_language_desc">There are a few possibilities that could have led to this issue:\n\n1. The language of the feed is incorrect. You can change the language by accessing at the \'Manage\' tab on the feed page.\n\n2. If you are using the language identifier (you can check this on the \'Manage\' tab under the feed page), the identifier may not be able to accurately detect the language of the content based on the confidence threshold you have set in the Setting page. Setting a higher confidence threshold will make it less likely for the language to be changed. For example, if the confidence threshold is set to 80% and the identifier has only 50% certainty about the language, it will result in a failure and the language will be set to English</string>
    <string name="help_offline_reading">Does the app support offline reading?</string>
    <string name="help_offline_reading_desc">Yes, the app does support offline reading. However, the articles need to be extracted in advance. You can check if an article has been extracted by clicking on it and observing whether it is in browser mode or extracted mode. Usually, subsequent articles will be automatically extracted once an article is clicked, but this process might be halted by the device to save resources.</string>
    <string name="help_reading_playing_mode">What are the \'Reading Mode\' and \'Playing Mode?\'</string>
</resources>